# cse578

./: README.md
assignment-0/: CMakeLists.txt  README.md  capture_images.cpp  chroma_keying.cpp  images_to_video.cpp  live_masking.cpp  report.tex  video_to_images.cpp
assignment-1/: CMakeLists.txt  README.md
assignment-1/data/: 2d-points.txt  3d-points.txt  README.txt  calib-matlab.txt  undist-2d-points.txt
assignment-1/data/checkerboard/: calibrationSession.mat  cameraParams.mat
assignment-1/data/dlt/: 2d-points.txt  3d-points.txt  undistort-2d-points.txt
assignment-1/data/phone-camera/: calib-matlab.txt
assignment-1/data/phone-camera/dlt/: 2d-points.txt  3d-points.txt
assignment-1/matlab/: run_zhangs.m  zhang_calibration.m
assignment-1/report/: report.tex
assignment-1/src/: Calibration.hpp  calibrator.cpp  calibrator.hpp  main.cpp  opencv_calibration.cpp  opencv_imagelist_creator.cpp  run_dlt.cpp  run_ransac_dlt.cpp  run_undistorted_dlt.cpp  utils.cpp  utils.hpp
assignment-2/: CMakeLists.txt  README.md
assignment-2/report/: report.tex
assignment-2/src/: main.cpp  panaroma.cpp  panaroma.h  run.cpp  utils.cpp  utils.hpp
assignment-3/: CMakeLists.txt  README.md
assignment-3/src/: .stereomatcher.h.swp  run.cpp  stereomatcher.cpp  stereomatcher.h  utils.h
assignment-4/: CMakeLists.txt  README.md
assignment-4/report/: report.tex
assignment-4/src/: gmm.h  grabcut.cpp  grabcut.h  main.cpp  run.cpp
assignment-5/: CMakeLists.txt  README.md
assignment-5/report/: report.tex
assignment-5/src/: optical_flow.cpp  optical_flow.h  run.cpp  run_motion_seg.cpp  run_of.cpp  run_tracking.cpp
